--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -25,6 +25,12 @@ path.domain, .tick line {
   margin-top: 20px;
 }
 
+.hljs {
+  padding: 0px;
+  display: initial;
+  background: transparent;
+}
+
 #main-menu .navbar-item span {
   margin-right: 5px;
 }
